# walter-esp-idf

./: .clang-format  CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/PULL_REQUEST_TEMPLATE/: FEATURE_PR.yml  FIX_PR.yml
.github/workflows/: auto_label.yml  auto_label_pr.yml  discord-release-announcement.yml  idf.yml  src-repo-sync.yml  sync_gitlab_staging.yml  sync_walter_arduino.yml
components/walter-modem/: CMakeLists.txt  WalterModem.cpp  WalterModem.h
examples/bluecherry/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/bluecherry/main/: CMakeLists.txt  Kconfig.projbuild  bluecherry.cpp  bluecherry_example.cpp  bluecherry_test.cpp  idf_component.yml
examples/bluecherry_test/main/: CMakeLists.txt  bluecherry_test.cpp  idf_component.yml
examples/coap/: README.md
examples/coap/main/: CMakeLists.txt  Kconfig.projbuild  coap.cpp  coap_example.cpp  idf_component.yml
examples/coap_test/main/: CMakeLists.txt  coap_test.cpp  idf_component.yml  main.cpp
examples/http/: CMakeLists.txt  README.md
examples/http/main/: CMakeLists.txt  Kconfig.projbuild  http.cpp  http_example.cpp  idf_component.yml
examples/http_test/main/: CMakeLists.txt  http_test.cpp
examples/https/: CMakeLists.txt  README.md
examples/https/main/: CMakeLists.txt  https.cpp  idf_component.yml
examples/modem_firmware_flash/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/modem_firmware_flash/main/: CMakeLists.txt  idf_component.yml  main.c  modem.c  modem_stp.c
examples/modem_firmware_flash/modem_files/: mtools.elf
examples/mqtt/: CMakeLists.txt  README.md
examples/mqtt/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  mqtt.cpp  mqtt_example.cpp
examples/mqtt_test/main/: CMakeLists.txt  idf_component.yml  mqtt_test.cpp
examples/mqtts/: CMakeLists.txt  README.md
examples/mqtts/main/: CMakeLists.txt  mqtts.cpp
examples/positioning/: CMakeLists.txt  README.md
examples/positioning/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  positioning.cpp
examples/socket_test/: CMakeLists.txt  test.md
examples/socket_test/main/: socket_test.cpp  (+1 more)
examples/tcp/: CMakeLists.txt  README.md
examples/tcp_socket_receive/: CMakeLists.txt  README.md
examples/udp/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/udp_socket/: README.md
src/: WalterDefines.h  WalterModem.cpp  WalterModem.h
src/proto/: WalterBlueCherry.cpp  WalterCoAP.cpp  WalterGNSS.cpp  WalterHTTP.cpp  WalterMQTT.cpp  WalterSocket.cpp
walter-modem/: CMakeLists.txt  README.md  idf_component.yml
walter-modem/src/: WalterModem.cpp  WalterModem.h
(+25 files in other folders)
